@@ -1,3 +1,8 @@
+2025-12-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* tramp-tests.el (tramp-test28-process-file)
+	(tramp-test30-make-process): Adapt tests.
+
 2025-12-06  Michael Albinus  <michael.albinus@gmx.de>
 
 	* tramp-tests.el (tramp-test28-process-file)
